<resources>
    <string name="app_name">QuizApp</string>
    <string name="question">Question</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="timer">00:00</string>
    <string name="result">Result:</string>
    <string name="in_correct">In correct:</string>
    <string name="fin">FINISH</string>
</resources>