<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/bg_question"
        android:elevation="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:text="@string/question"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/idLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="3 of 4" />
        </LinearLayout>

        <TextView
            android:id="@+id/idQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="Questions" />

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:background="@drawable/bg_timer">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_access_time_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView_count_down"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/timer"
                android:textStyle="bold"
                android:textColor="@color/white" />
        </LinearLayout>
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewA"
        style="@style/CardView_Variant">
        <TextView
            android:id="@+id/title_variantsA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/a"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:background="#00FFFFFF"/>
        <TextView
            android:id="@+id/variantBtnA"
            style="@style/TextView_Variant"
            tools:text="14"
            android:background="#00FFFFFF"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewB"
        style="@style/CardView_Variant">
        <TextView
            android:id="@+id/title_variantsB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/b"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:background="#00FFFFFF"/>
        <TextView
            android:id="@+id/variantBtnB"
            style="@style/TextView_Variant"
            tools:text="14"
            android:background="#00FFFFFF"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewC"
        style="@style/CardView_Variant">
        <TextView
            android:id="@+id/title_variantsC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/c"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:background="#00FFFFFF"/>
        <TextView
            android:id="@+id/variantBtnC"
            style="@style/TextView_Variant"
            tools:text="14"
            android:background="#00FFFFFF"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewD"
        style="@style/CardView_Variant">
        <TextView
            android:id="@+id/title_variantsD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/d"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:background="#00FFFFFF"/>
        <TextView
            android:id="@+id/variantBtnD"
            style="@style/TextView_Variant"
            tools:text="14"
            android:background="#00FFFFFF"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:foreground="@drawable/forgrount_btn"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="NestedWeights,UnusedAttribute" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:foreground="@drawable/forgrount_btn"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

</LinearLayout>